service-mesh/istio/istio-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled
    name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservice-framework
  labels:
    istio-injection: enabled
    name: microservice-framework
